--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </div>
     <div class="home-content">
       <div class="thoughts">
-        <div data-position="right" data-offset="60" class="notViewed animBlock thought">Le métier d’un agent immobilier
+        <div data-position="left" data-offset="60" class="notViewed animBlock thought">Le métier d’un agent immobilier
           est de vendre le bien de son client pas de vous conseiller
           en tant qu’acheteur !
         </div>
@@ -81,7 +81,7 @@
           prend énormément de temps, si vous travaillez et que vous
           avez en plus une famille à gérer, vous dégager du temps est un exploit !
         </div>
-        <div data-position="left" data-offset="60" class="notViewed animBlock thought">Les acquereurs d’un bien
+        <div data-position="right" data-offset="60" class="notViewed animBlock thought">Les acquereurs d’un bien
           immobilier ont moins de temps pour se décider que pour l’achat
           d’une simple paire de chaussures …
         </div>
@@ -272,7 +272,7 @@
   </section>
 
   <section class="who">
-    <span id="who" class="anchor"></span>
+    <span id="who" class="absolute-anchor"></span>
     <div class="logo">
       <img alt="logo" src="images/Logo_BYS_defonce.png" />
     </div>
