--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
       <div data-position="left" data-offset="60" class="notViewed animBlock step">
         <div class="step-index">4</div>
         <p><span class="step-title">Offre d’achat :</span> je vous
-          présente une analyse poussée du prix bien à acheter à partir de différentes bases de
+          présente une analyse poussée du prix du bien à acheter à partir de différentes bases de
           données du marché pour vous recommander un prix raisonnable à indiquer dans l’offre, vous décidez ensuite. Je
           vous prépare le modèle d’offre d’achat que vous signez.</p>
       </div>
