--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <meta property="og:title" content="Buy your side" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://buy-your-side.immo/" />
+  <meta property="og:image:url" content="https://buy-your-side.immo/images/meta-logo.png" />
+  <meta property="og:description" content="Je vous accompagne dans la recherche et l’acquisition de votre futur bien - Paris Ouest / Hauts de Seine" />
+
   <link href="style/main.css" rel="stylesheet">
   <link href="style/carousel.css" rel="stylesheet">
   <link href="style/bubble.css" rel="stylesheet">
@@ -298,7 +305,8 @@
       <img src="images/Portrait.jpg" alt="portrait" class="portrait" />
       <div class="who-content">
         <h2>Qui suis-je ?</h2>
-        <p>Ancienne avocate spécialisée en fiscalité passée ensuite par les Directions RH de grands groupes, j’ai mis à profit le confinement pour m’orienter vers un secteur qui m’avait toujours passionnée à
+        <p>Ancienne avocate spécialisée en fiscalité passée ensuite par les Directions RH de grands groupes, j’ai mis à
+          profit le confinement pour m’orienter vers un secteur qui m’avait toujours passionnée à
           titre personnel : l’immobilier.
         </p>
         <p>Ce domaine est vaste et tous les métiers ne m’attiraient pas mais j’avais depuis longtemps en tête
@@ -352,25 +360,25 @@
   <script type="module">
     // Import the functions you need from the SDKs you need
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.1.1/firebase-app.js";
-      import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.1.1/firebase-analytics.js";
-      // TODO: Add SDKs for Firebase products that you want to use
-      // https://firebase.google.com/docs/web/setup#available-libraries
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.1.1/firebase-analytics.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
 
-      // Your web app's Firebase configuration
-      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-      const firebaseConfig = {
-        apiKey: "AIzaSyDgc0wUtaDZB7GRcFhNU-BS1pEk3ysK5dk",
-        authDomain: "buy-your-side.firebaseapp.com",
-        projectId: "buy-your-side",
-        storageBucket: "buy-your-side.appspot.com",
-        messagingSenderId: "759158414918",
-        appId: "1:759158414918:web:e41202b8b87b8691783447",
-        measurementId: "G-EZ0NESS37K"
-      };
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyDgc0wUtaDZB7GRcFhNU-BS1pEk3ysK5dk",
+      authDomain: "buy-your-side.firebaseapp.com",
+      projectId: "buy-your-side",
+      storageBucket: "buy-your-side.appspot.com",
+      messagingSenderId: "759158414918",
+      appId: "1:759158414918:web:e41202b8b87b8691783447",
+      measurementId: "G-EZ0NESS37K"
+    };
 
-      // Initialize Firebase
-      const app = initializeApp(firebaseConfig);
-      const analytics = getAnalytics(app);
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
   </script>
 </body>
 
