fix og image ratio

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta property="og:title" content="Buy your side" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://buy-your-side.immo/" />
-  <meta property="og:image" content="https://buy-your-side.immo/images/meta-logo.png" />
+  <meta property="og:image" content="https://buy-your-side.immo/images/og-image.jpg" />
   <meta property="og:description" content="Je vous accompagne dans la recherche et l’acquisition de votre futur bien - Paris Ouest / Hauts de Seine" />
 
   <link href="style/main.css" rel="stylesheet">
