--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://buy-your-side.immo/" />
   <meta property="og:image" content="https://buy-your-side.immo/images/og-image.jpg" />
-  <meta property="og:description" content="Je vous accompagne dans la recherche et l’acquisition de votre futur bien - Paris Ouest / Hauts de Seine" />
+  <meta property="og:description" content="Je vous accompagne dans la recherche et l’acquisition de votre futur bien - Paris / Hauts de Seine" />
 
   <link href="style/main.css" rel="stylesheet">
   <link href="style/carousel.css" rel="stylesheet">
@@ -293,6 +293,7 @@
         Mes honoraires de recherche seront de 790 000 x 2% = 15 800 EUR arrondis à 15 000 EUR.</p>
       <p>Les honoraires ne sont dus qu’à la signature de l’acte de vente avec la remise des clés comme l’exige la loi.
       </p>
+      <p class="mention">Tarifs susceptibles de modifications</p>
     </div>
   </section>
 
@@ -328,11 +329,26 @@
         <p>Rencontrons nous !
         </p>
         <p class="signature">Stéphanie</p>
+        <p class="phone italic">06 68 39 67 28</p>
       </div>
     </div>
   </section>
 
   <footer>
+    <div class="footer-container">
+      <div class="mediation">
+        <span class="bold">MEDIATION – VIVONS MIEUX ENSEMBLE</span>
+        <a href="www.mediation-vivons-mieux-ensemble.fr" target="_blank" rel="noopener noreferrer">www.mediation-vivons-mieux-ensemble.fr</a>
+        <span>465 avenue de la Libération 54000 NANCY</span>
+        <span>mediation@vivons-mieux-ensemble.fr</span>
+      </div>
+      <div class="fci">
+        <!-- <a class="fci" href="" target="_blank" rel="noopener noreferrer"> -->
+          <img src="images/logo_FCI.jpeg" />
+          <span>Membre de la Fédération des Chasseurs Immobiliers</span>
+        <!-- </a> -->
+      </div>
+    </div>
     <details>
       <summary>Mentions légales</summary>
       <div class="legal">
