--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </div>
     </div>
     <div class="sub-nav">
-      <label>Paris Ouest / Hauts de Seine
+      <label>Paris / Hauts de Seine
       </label>
       <label>Je vous accompagne dans la recherche et l’acquisition de votre futur bien
       </label>
@@ -71,7 +71,7 @@
     </div>
   </nav>
   <div class="sub-nav-mobile">
-    <label>Paris Ouest / Hauts de Seine
+    <label>Paris / Hauts de Seine
     </label>
     <label>Je vous accompagne dans la recherche et l’acquisition de votre futur bien
     </label>
@@ -249,9 +249,7 @@
         <p><span class="step-title">Vérification des éléments extérieurs
             au bien :</span> je vérifie si des projets qui pourraient nuire à votre
           tranquillité ou à la valeur du bien sont en cours (percement d’une nouvelle ligne de métro sous la rue, permis
-          de surélévation accordé à l’immeuble d’en face etc…), je cherche si des appartements de l’immeuble sont loués
-          à
-          des touristes, je consulte les comptes rendus des visites de quartier s’ils existent, je vérifie la présence
+          de surélévation accordé à l’immeuble d’en face etc…), je consulte les comptes rendus des visites de quartier s’ils existent, je vérifie la présence
           d’entreprises qui pourraient être source de nuisance etc... J’essaye d’obtenir le maximum d’informations pour
           que vous sachiez où vous mettez les pieds.</p>
       </div>
